--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -5,58 +5,17 @@
   --color-black: #171717;
   --color-neutral: #9f9f9f;
   --color-bg-foundation: var(--color-off-white);
+  --color-bg-inverse: var(--color-black);
   --color-text-primary: var(--color-black);
   --color-text-secondary: var(--color-neutral);
+  --color-text-inverse: var(--color-off-white);
   --font-script: var(--font-script);
   --font-sans: var(--font-sans);
-}
-
-:root {
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  --spacing-site-header-h: 50px;
 }
 
 body {
   color: var(--color-text-primary);
   background: var(--color-bg-foundation);
   font-family: var(--font-sans);
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.imgDark {
-  display: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-
-  .imgLight {
-    display: none;
-  }
-  .imgDark {
-    display: unset;
-  }
 }
