--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -12,6 +12,7 @@
   --font-script: var(--font-script);
   --font-sans: var(--font-sans);
   --spacing-site-header-h: 50px;
+  --spacing-site-container-w: 1920px;
 }
 
 body {
