add some anchor links

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -15,6 +15,12 @@
   --spacing-site-container-w: 1920px;
 }
 
+html {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
+}
+
 body {
   color: var(--color-text-primary);
   background: var(--color-bg-foundation);
