--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -4,6 +4,8 @@
   --color-off-white: #fbfaf2;
   --color-black: #171717;
   --color-neutral: #9f9f9f;
+  --color-orange: #ec4926;
+  --color-accent: var(--color-orange);
   --color-bg-foundation: var(--color-off-white);
   --color-bg-inverse: var(--color-black);
   --color-text-primary: var(--color-black);
